manifests/matrix_chart/signal_bridge.yaml

apiVersion: v1
kind: Service
metadata:
  name: mautrix-signal
  namespace: chat
  labels:
    app.kubernetes.io/name: mautrix-signal
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9000"
spec:
  type: ClusterIP
  ports:
  - port: 29328
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: mautrix-signal

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautrix-signal
  labels:
    app.kubernetes.io/name: mautrix-signal
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mautrix-signal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mautrix-signal
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: signald
          image: docker.io/signald/signald:stable
          imagePullPolicy: Always
          volumeMounts:
          - name: signald
            mountPath: /signald
        - name: mautrix-signal
          image: "dock.mau.dev/mautrix/signal:v0.4.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 29328
              protocol: TCP
            - name: metrics
              containerPort: 9000
              protocol: TCP
          volumeMounts:
          - name: signald
            mountPath: /signald
          - name: data
            mountPath: /data
          livenessProbe:
            tcpSocket:
              port: 29318
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 29318
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 29318
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: data
          emptyDir: {}
        - name: signald
          emptyDir: {}
        - name: mautrix-signal-config
          secret:
            secretName: mautrix-signal-config
        - name: mautrix-signal-registration
          secret:
            secretName: mautrix-signal-registration
---
