manifests/matrix_chart/telegram_bridge.yaml

apiVersion: v1
kind: Service
metadata:
  name: mautrix-telegram
  namespace: chat
  labels:
    app.kubernetes.io/name: mautrix-telegram
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9000"
spec:
  type: ClusterIP
  ports:
  - port: 29318
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: mautrix-telegram

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautrix-telegram
  labels:
    app.kubernetes.io/name: mautrix-telegram
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mautrix-telegram
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mautrix-telegram
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: mautrix-telegram
          image: "dock.mau.dev/mautrix/telegram:v0.11.3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 29318
              protocol: TCP
            - name: metrics
              containerPort: 9000
              protocol: TCP
          volumeMounts:
          - name: data
            mountPath: /data
          livenessProbe:
            tcpSocket:
              port: 29318
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 29318
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 29318
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: data
          emptyDir: {}
        - name: mautrix-telegram-config
          secret:
            secretName: mautrix-telegram-config
        - name: mautrix-telegram-registration
          secret:
            secretName: mautrix-telegram-registration
---
