manifests/matrix_chart/sliding-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sliding-sync
  namespace: chat
  labels:
    app.kubernetes.io/name: "matrix"
    component: sliding-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sliding-sync
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sliding-sync
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: "sliding-sync"
          image: "ghcr.io/matrix-org/sliding-sync:v0.99.19"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8008
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sliding-sync
  namespace: chat
  labels:
    app.kubernetes.io/name: "matrix"
    component: sliding-sync
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9000"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    name: web
  selector:
    app.kubernetes.io/name: sliding-sync
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sliding-sync
  namespace: chat
  labels:
    app.kubernetes.io/name: "matrix"
    component: sliding-sync
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - syncv3.matrix.cluster.fun
    secretName: riot-ingress
  rules:
  - host: syncv3.matrix.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sliding-sync
            port:
              number: 80
---
